[package]
authors = ["rerun.io <opensource@rerun.io>"]
categories = []
description = ""
edition = "2021"
homepage = "https://github.com/rerun-io/ rs-example-process-rrd"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []
license = "MIT OR Apache-2.0"
name = "process_rrd"
publish = false
readme = "README.md"
repository = "https://github.com/rerun-io/ rs-example-process-rrd"
rust-version = "1.76"
version = "0.1.0"


[[bin]]
name = "log"
path = "src/log.rs"

[[bin]]
name = "process"
path = "src/process.rs"


[dependencies]
rerun = "0.16.0"
re_data_store = "0.16.0"
re_entity_db = "0.16.0"
re_log_encoding = "0.16.0"
re_query = "0.16.0"
re_types = "0.16.0"


[dev-dependencies]


[patch.crates-io]
